<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/total_card_view"
        android:layout_width="200dp"
        android:layout_height="65dp"
        app:cardBackgroundColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/total_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="18dp"
                android:layout_gravity="center_vertical|start"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_income" />

            <TextView
                android:id="@+id/total_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="-29dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_horizontal"
                android:text="@string/text_total_income"
                android:textSize="11sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/totalIncome"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="start"
                android:text="@string/nominalKosong"
                android:textColor="@color/white"
                android:textSize="11sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
