<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_title_view"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:hint="@string/text_title"
                android:textColorHint="@color/blue_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_title"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_amount_view"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/text_expense_amount"
                app:prefixText="@string/text_expense_rupiah"
                android:textColorHint="@color/blue_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_amount"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="numberDecimal"
                    android:textColor="@color/blue_dark"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_transactionType_view"
                style="@style/SpinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:hint="@string/text_expense_transaction_type"
                app:boxBackgroundColor="@color/background"
                android:background="@color/white">

                <Spinner
                    android:id="@+id/transactionType"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_tag_view"
                style="@style/SpinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:hint="@string/text_expense_transaction_type"
                app:boxBackgroundColor="@color/background"
                android:background="@color/white">

                <Spinner
                    android:id="@+id/tag"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_when_view"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/text_expense_when"
                app:endIconDrawable="@drawable/ic_baseline_calendar"
                app:endIconMode="custom"
                android:textColorHint="@color/blue_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_when"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="text"
                    android:textColor="@color/blue_dark"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_note_view"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:hint="@string/text_expense_note"
                android:textColorHint="@color/blue_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_note"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="text"
                    android:maxLength="240"
                    android:maxLines="3"
                    android:textColor="@color/blue_dark"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
